--- a/src/app/components/home-screen/home-screen.component.css
+++ b/src/app/components/home-screen/home-screen.component.css
@@ -2,18 +2,19 @@
   width: 100%;
   height: 100vh;
   background: #091b29;
-  position: sticky;
-  top: 0;
-  z-index: 2;
 }
 
 .navbar_container {
   width: 87%;
   height: 80px;
   display: flex;
+  background-color: transparent;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .navbar_container .logo_text {
@@ -66,12 +67,13 @@
 }
 
 .sidebar {
-  width: 350px;
+  width: 320px;
   height: calc(100% - 60px);
   position: fixed;
   top: 80px;
   right: -350px;
-  background-color: #0d3859;
+  border: 1px solid #0a2c45;
+  background-color: #a3a4a5d0;
   box-shadow: -2px 0 5px rgba(36, 36, 36, 0.106);
   display: flex;
   flex-direction: column;
@@ -104,8 +106,10 @@
   cursor: pointer;
 }
 
+/* .sidebar ul li:active{} */
+
 .sidebar ul li a {
-  color: rgb(116, 115, 115);
+  color: rgb(170, 168, 168);
   text-decoration: none;
 }
 
