--- a/src/app/components/home-screen/home-screen.component.css
+++ b/src/app/components/home-screen/home-screen.component.css
@@ -5,16 +5,17 @@
 }
 
 .navbar_container {
-  width: 87%;
+  width: 100%;
   height: 80px;
   display: flex;
-  background-color: transparent;
+  padding: 0px 60px;
+  background-color: #091b29;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 20;
 }
 
 .navbar_container .logo_text {
