--- a/src/app/components/home-screen/home-screen.component.html
+++ b/src/app/components/home-screen/home-screen.component.html
@@ -73,4 +73,9 @@
   <div #educationSection>
     <app-education></app-education>
   </div>
+
+  <!-- Skills -->
+<app-skills></app-skills>
 </div>
+
+
