--- a/src/app/components/home-screen/home-screen.component.css
+++ b/src/app/components/home-screen/home-screen.component.css
@@ -1,6 +1,7 @@
 .main_container {
   width: 100%;
   height: 100vh;
+  margin-top: 80px;
   background: #091b29;
 }
 
@@ -13,7 +14,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 20;
 }
