--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,47 +1,48 @@
 .skills-container {
-    text-align: center;
-    color: #ffffff;
+  text-align: center;
+  color: #ffffff;
+  background: linear-gradient(#193649, #091b29);
 }
 
 .skills-container .highlight {
-    color: #5cc9f5;
+  color: #5cc9f5;
 }
 
 .box-container {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
 }
 
 .box-text-container {
-    width: 45%;
+  width: 45%;
 }
 
 .box-text-container h4 {
-    color: #5cc9f5;
-    font-size: 20px;
+  color: #5cc9f5;
+  font-size: 20px;
 }
 
 .box-style {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .progress-bar {
-    width: 100%;
-    background-color: #222;
-    border-radius: 5px;
-    overflow: hidden;
-    height: 10px;
-    margin: 5px 0;
+  width: 100%;
+  background-color: #222;
+  border-radius: 5px;
+  overflow: hidden;
+  height: 10px;
+  margin: 5px 0;
 }
 
 .progress-fill {
-    background-color: #5cc9f5;
-    height: 100%;
-    border-radius: 5px 0 0 5px;
+  background-color: #5cc9f5;
+  height: 100%;
+  border-radius: 5px 0 0 5px;
 }
 
 span {
-    font-size: 12px;
-    color: #aaa;
+  font-size: 12px;
+  color: #aaa;
 }
