--- a/src/app/components/home-screen/home-screen.component.css
+++ b/src/app/components/home-screen/home-screen.component.css
@@ -1,6 +1,5 @@
 .main_container {
   width: 100%;
-
   margin-top: 80px;
   background: #091b29;
 }
@@ -117,6 +116,7 @@
 
 .body_container {
   width: 87%;
+  height: 100vh;
   display: flex;
   margin: 0 auto;
 }
@@ -126,11 +126,27 @@
   margin: 90px 0px 10px 0px;
 }
 
+@keyframes colorGlow {
+  0% {
+    text-shadow: 0 0 15px #04a3e8, 0 0 20px #07a0e3;
+  }
+  33% {
+    text-shadow: 0 0 15px #3e44b9, 0 0 20px #5881e7;
+  }
+  66% {
+    text-shadow: 0 0 15px #927ce1, 0 0 20px #c474f9;
+  }
+  100% {
+    text-shadow: 0 0 15px #04a3e8, 0 0 20px #07a0e3;
+  }
+}
+
 .text_container h1 {
   color: white;
   font-weight: 900;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 3px;
+  animation: colorGlow 3s infinite;
 }
 
 .text_container h4 {
@@ -189,6 +205,7 @@
 .logo {
   width: 500px;
   margin: 0px 0px 0px 100px;
+  filter: drop-shadow(1px 1px 20px rgb(40, 161, 197));
 }
 
 .body-icon {
