--- a/src/app/components/home-screen/home-screen.component.html
+++ b/src/app/components/home-screen/home-screen.component.html
@@ -39,7 +39,7 @@
   <div class="body_container" #homeSection>
     <!-- left text -->
     <div class="text_container">
-      <h1>Hi,I'm Thant Zin</h1>
+      <h1>Hi,I'm Thant Zin Jr</h1>
       <h4 class="mt-3">Frontend Developer</h4>
       <p class="mt-3">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. In pariatur
@@ -73,9 +73,6 @@
   <div #educationSection>
     <app-education></app-education>
   </div>
-
-  <!-- Skills -->
-<app-skills></app-skills>
 </div>
-
-
+<!-- Skills -->
+<app-skills></app-skills>
