--- a/src/app/components/home-screen/home-screen.component.html
+++ b/src/app/components/home-screen/home-screen.component.html
@@ -53,7 +53,9 @@
       <div class="body-icon">
         <a href=""> <i class="fa-brands fa-facebook"></i></a>
         <a href=""><i class="fa-brands fa-twitter"></i></a>
-        <a href=""> <i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/thant-zin-tun-1298522a0/">
+          <i class="fa-brands fa-linkedin"></i
+        ></a>
       </div>
     </div>
 
@@ -76,3 +78,5 @@
 </div>
 <!-- Skills -->
 <app-skills></app-skills>
+
+<app-box-menu></app-box-menu>
