--- a/src/app/components/home-screen/home-screen.component.html
+++ b/src/app/components/home-screen/home-screen.component.html
@@ -53,9 +53,13 @@
       <div class="body-icon">
         <a href=""> <i class="fa-brands fa-facebook"></i></a>
         <a href=""><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/in/thant-zin-tun-1298522a0/">
-          <i class="fa-brands fa-linkedin"></i
-        ></a>
+        <a
+          href="https://www.linkedin.com/in/thant-zin-tun-1298522a0/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
     </div>
 
