--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -1,7 +1,7 @@
 .about-me-container {
   width: 100%;
   height: 100vh;
-  background:linear-gradient(#193649,#091B29);
+  background: linear-gradient(#193649, #091b29);
   display: flex;
   align-items: center;
   text-align: center;
