--- a/src/app/components/home-screen/home-screen.component.html
+++ b/src/app/components/home-screen/home-screen.component.html
@@ -1,6 +1,9 @@
 <div class="navbar_container">
   <!-- logo -->
-  <div class="logo_text">TZTun.</div>
+  <div class="logo-container">
+    <div class="spin"></div>
+    <div class="logo_text">TZTun.</div>
+  </div>
 
   <!-- menu-button -->
 
